--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION ${PROJECT_CMAKE_VERSION})
 set(CMAKE_CXX_STANDARD ${PROJECT_CXX_STANDARD})
 
-add_executable (driver "Driver.cpp")
+add_executable (driver "Driver.cpp" "Options.h" "Options.cpp")
 set_target_properties (
 	driver
 	PROPERTIES
