Start error catching with fuzzing + fix parser bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory ("arco")
 add_subdirectory ("tests")
 add_subdirectory ("workarea")
 add_subdirectory ("driver")
+add_subdirectory ("fuzzing")
